--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,21 @@
     </properties>
 
     <dependencies>
+
+        <!-- spring-kafka -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>2.5.0.RELEASE</version>
+        </dependency>
+
+        <!-- kafka client -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
         <!-- spring aop with aspectJ support -->
         <dependency>
             <groupId>org.aspectj</groupId>
