--- a/spring-rabbitmq/pom.xml
+++ b/spring-rabbitmq/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.55</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>29.0-jre</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
