feat: add spring event framework Demo

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>batch-cache</module>
         <module>spring-rabbitmq</module>
+        <module>spring-event-framework</module>
     </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
