--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>spring-rabbitmq</module>
         <module>spring-event-framework</module>
         <module>redis-lbs</module>
+        <module>spring-data-redis-lua</module>
+        <module>sentinel-demo</module>
     </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
