--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>redis-lbs</module>
         <module>spring-data-redis-lua</module>
         <module>sentinel-demo</module>
+        <module>java-easy-rules</module>
     </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
