feat: add java-unit-test

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>sentinel-demo</module>
         <module>java-easy-rules</module>
         <module>spring-data-es</module>
+        <module>java-unit-test</module>
     </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
