--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,9 @@ hs_err_pid*
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
+.idea/**/compiler.xml
+.idea/**/encodings.xml
+.idea/**/jarRepositories.xml
 
 # Gradle
 .idea/**/gradle.xml
