--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>spring-validation</module>
         <module>flow-limit</module>
         <module>java-date</module>
+        <module>spring-async</module>
     </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
