--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>java-date</module>
         <module>spring-async</module>
         <module>spring-self</module>
+        <module>spring-cycle-dependency</module>
     </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
