feat: add mapstruct-demo

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>spring-async</module>
         <module>spring-self</module>
         <module>spring-cycle-dependency</module>
+        <module>mapstruct-demo</module>
     </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
