feat: 暴力破解求平方根

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>spring-cycle-dependency</module>
         <module>mapstruct-demo</module>
         <module>spring-retry</module>
+        <module>leetcode-sqrt</module>
     </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
