--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>mapstruct-demo</module>
         <module>spring-retry</module>
         <module>leetcode-sqrt</module>
+        <module>distribute-id-generator</module>
     </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
