feat: add ArrayUnionService
https://leetcode-cn.com/leetbook/read/top-interview-questions-easy/x2y0c2/

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <module>spring-cycle-dependency</module>
         <module>mapstruct-demo</module>
         <module>spring-retry</module>
-        <module>leetcode-sqrt</module>
+        <module>leetcode</module>
         <module>distribute-id-generator</module>
         <module>snowflake-time</module>
     </modules>
