--- a/leetcode/pom.xml
+++ b/leetcode/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<artifactId>leetcode-sqrt</artifactId>
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<artifactId>leetcode</artifactId>
 	<build>
 		<plugins>
 			<plugin>
@@ -39,7 +39,7 @@
 	<description>Demo project for Spring Boot</description>
 	<groupId>com.github.learn</groupId>
 	<modelVersion>4.0.0</modelVersion>
-	<name>leetcode-sqrt</name>
+	<name>leetcode</name>
 	<parent>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<groupId>org.springframework.boot</groupId>
