--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-
     <modules>
         <module>batch-cache</module>
         <module>spring-rabbitmq</module>
@@ -32,6 +31,7 @@
         <module>distribute-id-generator</module>
         <module>snowflake-time</module>
         <module>java-multi-thread</module>
+        <module>java-basic</module>
     </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
