--- a/java-basic/pom.xml
+++ b/java-basic/pom.xml
@@ -27,6 +27,12 @@
     </properties>
     <dependencies>
 
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.69</version>
+        </dependency>
+
         <!-- elasticsearch transport 5.4.3 -->
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
