feat: add insure_server impl module

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>java-basic</module>
         <module>java-encrypt</module>
         <module>java-sftp</module>
+        <module>insure-server</module>
     </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
