feat: add docker java hello world

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <module>java-sftp</module>
         <module>insure-server</module>
         <module>ip-update-daemon</module>
+        <module>hello-world</module>
     </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
