--- a/leetcode/pom.xml
+++ b/leetcode/pom.xml
@@ -24,6 +24,11 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<groupId>org.springframework.boot</groupId>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.73</version>
+		</dependency>
 
 		<dependency>
 			<artifactId>lombok</artifactId>
