--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>ip-update-daemon</module>
         <module>hello-world</module>
         <module>thread-RAM-location</module>
+        <module>thread-state-validate</module>
     </modules>
     <properties>
         <!-- maven-resources-plugin 会自动读取此配置 -->
