feat: add QueryMap

--- a/feign/pom.xml
+++ b/feign/pom.xml
@@ -47,6 +47,11 @@
       <version>${feign.version}</version>
     </dependency>
     <dependency>
+      <groupId>io.github.openfeign</groupId>
+      <artifactId>feign-okhttp</artifactId>
+      <version>${feign.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>2.15.1</version>
