feat: add README.md

--- a/spring-boot-project/pom.xml
+++ b/spring-boot-project/pom.xml
@@ -22,6 +22,7 @@
     <module>rpc-http</module>
     <module>rpc-dubbo</module>
     <module>domain</module>
+    <module>repo</module>
   </modules>
 
   <properties>
