feat: add spring-boot-actuator.app and direct memory test

--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,8 @@
     <module>feign</module>
             
     <module>spring-framework</module>
-        
+    <module>spring-boot-project</module>
+
   </modules>
       
   <properties>
